// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Perfiles canónicos · snapshot > Asalariado clase media mexicano (mexican-middle-class) 1`] = `
{
  "insightIds": [
    "hasGoodDebt",
    "investingActively",
    "noIndexFunds",
    "riskProfileMatchesAge",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "MX",
  "perfil": "Asalariado clase media mexicano",
  "sectionProfiles": {
    "base": "Con margen",
    "debt": "Manejando la deuda",
    "investment": "Inversor activo",
    "protection": "Sin cobertura",
    "stability": "Bien protegido",
  },
  "sectionScores": {
    "base": 74,
    "debt": 59,
    "investment": 62,
    "protection": 0,
    "stability": 67,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Estudiante con deuda educativa (student-with-loans) 1`] = `
{
  "insightIds": [
    "chronicFinancialStress",
    "compoundTimeWasted",
    "hasGoodDebt",
    "leverageAgainstAssets",
    "noEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "AR",
  "perfil": "Estudiante con deuda educativa",
  "sectionProfiles": {
    "base": "Equilibrista",
    "debt": "Casi sin lastre",
    "investment": "Inversor en formación",
    "protection": "Sin cobertura",
    "stability": "Construyendo el colchón",
  },
  "sectionScores": {
    "base": 43,
    "debt": 62,
    "investment": 50,
    "protection": 0,
    "stability": 33,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Freelancer ahorrador colombiano (colombian-freelancer) 1`] = `
{
  "insightIds": [
    "investingActively",
    "noDebt",
    "strongEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CO",
  "perfil": "Freelancer ahorrador colombiano",
  "sectionProfiles": {
    "base": "Con margen",
    "debt": "Sin lastre",
    "investment": "Inversor activo",
    "protection": "Sin cobertura",
    "stability": "Bien protegido",
  },
  "sectionScores": {
    "base": 76,
    "debt": 100,
    "investment": 78,
    "protection": 0,
    "stability": 77,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Joven precarizado argentino (young-argentine-precarious) 1`] = `
{
  "insightIds": [
    "allBadDebt",
    "chronicFinancialStress",
    "compoundTimeWasted",
    "debtPaymentPressureModerate",
    "incomeBelowMinimum",
    "noBudgetSystem",
    "noEmergencyFund",
    "noFinancialEducation",
    "toxicRates",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "AR",
  "perfil": "Joven precarizado argentino",
  "sectionProfiles": {
    "base": "Apretado",
    "debt": "Manejando la deuda",
    "investment": "Curioso del mercado",
    "protection": "Sin cobertura",
    "stability": "Sin red",
  },
  "sectionScores": {
    "base": 35,
    "debt": 43,
    "investment": 20,
    "protection": 0,
    "stability": 18,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Pareja con hijos clase trabajadora (working-family) 1`] = `
{
  "insightIds": [
    "badCreditScore",
    "chronicFinancialStress",
    "consolidationCandidate",
    "hasGoodDebt",
    "highObligatorySpending",
    "noFinancialEducation",
    "notInvestingButReady",
    "toxicRates",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CO",
  "perfil": "Pareja con hijos clase trabajadora",
  "sectionProfiles": {
    "base": "Con margen",
    "debt": "Manejando la deuda",
    "investment": "Curioso del mercado",
    "protection": "Sin cobertura",
    "stability": "Resiliencia parcial",
  },
  "sectionScores": {
    "base": 71,
    "debt": 50,
    "investment": 20,
    "protection": 0,
    "stability": 59,
  },
}
`;

exports[`Perfiles canónicos · snapshot > Rentista experimentado chileno (chilean-rentier) 1`] = `
{
  "insightIds": [
    "automatedBudget",
    "hasGoodDebt",
    "incomeHigh",
    "investingActively",
    "leverageAgainstAssets",
    "lowObligatorySpending",
    "oneVeryLargeDebt",
    "riskProfileMatchesAge",
    "strongEmergencyFund",
  ],
  "overallProfile": {
    "bottleneck": "protection",
    "label": "Sin cobertura",
    "reason": "bottleneck",
  },
  "pais": "CL",
  "perfil": "Rentista experimentado chileno",
  "sectionProfiles": {
    "base": "Cómodo",
    "debt": "Casi sin lastre",
    "investment": "Inversor maduro",
    "protection": "Sin cobertura",
    "stability": "Fortaleza",
  },
  "sectionScores": {
    "base": 93,
    "debt": 66,
    "investment": 93,
    "protection": 0,
    "stability": 100,
  },
}
`;
